# freightflow

./: .gitignore  README.md  architecture_design.md  database_schema.md  docker-compose.yml  implementation_plan.md
backend/: add_column.py  create_super_admin.py  delete_user.py  fix_pods.py  migrate.py  pyproject.toml  requirements.txt  test_auth_local.py  test_hos.py  test_update.py
backend/alembic/: env.py
backend/alembic/versions/: 00da28cc46d7_initial_baseline.py  2f9afbff1563_add_domain_events.py  9a391678883f_add_hos_logs.py  eb971093c90f_add_shipmenttracking_model.py  f738649e2510_add_appointment_scheduling_fields_to_.py  fb3ca5eeb2b6_add_missing_indexes.py
backend/api/: index.py
backend/app/: main.py  scheduler.py
backend/app/api/: dependencies.py  websockets.py
backend/app/core/: celery_app.py  config.py  deps.py  events.py  exceptions.py  logging.py  models.py  pagination.py  permissions.py  redis.py  security.py  uow.py  websockets.py  workflow.py
backend/app/db/: repository.py
backend/app/domain/compliance/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/finance/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/fleet/drivers/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/freight/disputes/: models.py  repository.py  (+3 more)
backend/app/domain/identity/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/integrations/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domain/notifications/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/tasks/: document_tasks.py  email_tasks.py  notification_tasks.py
backend/freightflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_admin.py  test_auth.py  test_auth_flow.py  test_bids.py  test_companies.py  test_loads.py  test_notifications.py  test_shipments.py  test_tenders.py
(+140 files in other folders)
